Added Normalizer and Menu. Changed template inheritance.

--- a/Resources/views/entity/edit.html.twig
+++ b/Resources/views/entity/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'logged.html.twig' %}
+{% extends '@VctlsEntity/base.html.twig' %}
 
 {% block body %}
     <div class="panel panel-default">
