--- a/Resources/views/entity/index.html.twig
+++ b/Resources/views/entity/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'logged.html.twig' %}
+{% extends '@VctlsEntity/base.html.twig' %}
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('assets/vendor/datatables.net-bs/css/dataTables.bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/vendor/datatables.net-responsive-bs/css/responsive.bootstrap.css') }}">
