--- a/Resources/views/entity/new.html.twig
+++ b/Resources/views/entity/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'logged.html.twig' %}
+{% extends '@VctlsEntity/base.html.twig' %}
 {% block javascripts %}
     <script src="{{ asset("assets/vendor/jquery-ui/jquery-ui.min.js") }}"></script>
 {% endblock %}
