--- a/Resources/views/entity/show.html.twig
+++ b/Resources/views/entity/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'logged.html.twig' %}
+{% extends '@VctlsEntity/base.html.twig' %}
 
 {% block body %}
     <div class="panel panel-default">
