--- a/Resources/views/simple_panel.html.twig
+++ b/Resources/views/simple_panel.html.twig
@@ -1,4 +1,4 @@
-{% extends '@INSASocle/logged.html.twig' %}
+{% extends '@VctlsEntity/base.html.twig' %}
 {% block stylesheets %}
 {% endblock %}
 {% block body %}
