Added error display, normalization of arrays.

--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -1,3 +1,4 @@
+{% import '@VctlsEntity/macros/flash.html.twig' as flash %}
 <!DOCTYPE html>
 <html>
 
@@ -39,6 +40,9 @@
 </div>
 
 <div id="container" class="container">
+    <div id="alert">
+        {{ flash.flashbag() }}
+    </div>
     {% block body %}{% endblock %}
 </div>
 
