Migrated form bower to yarn. Added a default Form Type.

--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>{% block title %}{{ application_name }}{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}" media="screen">
     <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap-drawer/dist/css/bootstrap-drawer.min.css') }}">
