Added boolean type to default form.

--- a/Resources/views/entity/index.html.twig
+++ b/Resources/views/entity/index.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('vendor/datatables/media/js/jquery.dataTables.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('vendor/datatables.net/js/jquery.dataTables.js') }}"></script>
     <script type="text/javascript" src="{{ asset('vendor/datatables.net-responsive/js/dataTables.responsive.js') }}"></script>
     <script>
         $(function () {
